<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:letterSpacing="0.02"
            android:text="@string/app_name_small"
            android:textColor="@android:color/white"
            android:textSize="27sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/text_participation"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/text_thank_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans"
                android:hint="@string/text_thank_you" />

            <Button
                android:id="@+id/button_start_new_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_bg"
                android:fontFamily="@font/open_sans"
                android:minHeight="0dp"
                android:text="@string/text_start_session" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/text_alert_icon"
                    android:src="@drawable/ic_alert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center_vertical"
                    android:text="@string/text_warning" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/test_developed_by"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_leap_org"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/text_leap_org_image"
                    android:src="@drawable/leap" />

                <ImageView
                    android:id="@+id/image_iisc_org"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="25dp"
                    android:contentDescription="@string/text_iisc_org_image"
                    android:src="@drawable/iisc" />

                <ImageView
                    android:id="@+id/image_cogknit_org"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/cognknit_org_image"
                    android:src="@drawable/cogknit" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/text_your_comments"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:fontFamily="@font/open_sans"
                android:gravity="top|start"
                android:hint="@string/text_feedback"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:padding="8dp"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/button_send_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_feedback"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/text_feedback_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_feedback_thanks"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>