<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_age"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/text_age_hint"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/age_error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:maxWidth="80dp"
                    android:text="@string/text_valid_age"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>

            <Spinner
                android:id="@+id/input_gender"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="5" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/text_proficient_in_english"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/input_english_proficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/input_english_radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/text_yes" />

            <RadioButton
                android:id="@+id/input_english_radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/text_no" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/text_returning_user"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_returning_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_returning_user_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/text_yes" />

            <RadioButton
                android:id="@+id/radio_returning_user_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/text_no" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/text_location"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/input_country"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/input_state"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/input_locality"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/text_locality"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_metadata_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_border_bg"
                android:fontFamily="@font/open_sans"
                android:minHeight="0dp"
                android:text="@string/previous"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_metadata_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_shape_bg"
                android:fontFamily="@font/open_sans"
                android:minHeight="0dp"
                android:text="@string/next"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/text_mandatory"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>